# moveops

./: .gitignore  LICENSE  README.md  pyproject.toml
src/moveops/: cli.py  export.py  models.py  storage.py
src/moveops/templates/: generic.yaml  wisconsin.yaml
tests/: test_models.py  test_storage.py
